--- a/style.css
+++ b/style.css
@@ -263,6 +263,89 @@ textarea:focus, input:focus{
     padding: 1.5em 0;
 }
 
+.footer img{
+    margin-bottom: -4px;
+}
+
+.footer .nav-footer{
+    background-color: #6dcb55;
+    text-align: left;
+}
+
+.footer .nav-footer table{
+    padding: 80px 0;
+    margin: 0 auto;
+}
+
+.footer .nav-footer table tr th{
+    margin: 0 30px 13px 30px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    width: 27%;
+}
+
+.footer .nav-footer table tr td{
+    width: 27%;
+    margin: 0 30px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 40px;
+    height: 56px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.footer .nav-footer table tr td:hover{
+    color: #369e45;
+}
+
+.footer .nav-footer table tr td .social{
+    display: flex;
+    align-items: center;
+}
+
+.footer .nav-footer table tr td .social i{
+    padding-right: 10px;
+    font-size: 23px;
+} 
+
+.footer .nav-footer table tr td input{
+    width: 100%;
+    border-radius: 56px;
+    height: 56px;
+    border: none;
+    padding: 10px 15px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    color: #0a0a0a;
+    margin-bottom: 12px;
+}
+
+.footer .nav-footer table tr td button{
+    background: #205529;
+    color: #fff;
+    font-weight: 800;
+    text-transform: uppercase;
+    width: 100%;
+    height: 56px;
+    border-radius: 56px;
+    border: none;
+    padding: 10px 15px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.copyright{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 16px 0 6.5em 0;
+}
+
+
 @media only screen and (max-width: 1500px) {
     .best-sellers {
         display: flex;
